# mpx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/mpx/: api.hpp  communicator.hpp  data_range.hpp  data_type.hpp  exception.hpp  recv.hpp  request.hpp  send.hpp  vector.hpp
tests/: CMakeLists.txt  api.test.cpp  data_range.test.cpp  data_type.test.cpp  exception.test.cpp  recv.test.cpp  send.test.cpp  vector.test.cpp
